--- a/src/media.scss
+++ b/src/media.scss
@@ -81,8 +81,8 @@
   }
   // GITHUB
   .wrapper div:nth-child(7) {
-    grid-column: 1 / 3 !important;
-    grid-row: 8 !important;
+    grid-column: 1 !important;
+    grid-row: 9 !important;
     // background-color: white;
   }
   // ABOUT
@@ -94,13 +94,13 @@
   // PROJECT 3
   .wrapper div:nth-child(9) {
     grid-column: 1 / 3 !important;
-    grid-row: 9 !important;
+    grid-row: 10 !important;
     background-color: white;
   }
   // CONTACT
   .wrapper div:nth-child(10) {
-    grid-column: 1 / 3 !important;
-    grid-row: 10 !important;
+    grid-column: 2 !important;
+    grid-row: 9 !important;
     background-color: white;
   }
 }
